# metalcpp

./: CMakeLists.txt  README.md
metal-cmake/: CMakeLists.txt  definition.cpp
shaders/: compute.msl
src/: main.cpp
